Fix blurry checkbox border in Firefox. Remove box-shadow. Vertically align labels.

--- a/src/stylesheets/components/viewer/_findbar.scss
+++ b/src/stylesheets/components/viewer/_findbar.scss
@@ -106,7 +106,7 @@
 
   .toolbarLabel {
     margin-right: 13px;
-    line-height: 1.273; // Center vertically
+    line-height: $toolbar-label-line-height; // Center vertically
   }
 
   #findResultsCount {
