--- a/src/stylesheets/themes/_light-generic.scss
+++ b/src/stylesheets/themes/_light-generic.scss
@@ -102,8 +102,12 @@ $toolbar-field-box-shadow:          null;
 $toolbar-field-box-shadow-2x:       null;
 $toolbar-field-loading-x:           3px;
 $toolbar-field-bg:                  #fff;
+$toolbar-label-line-height:         1.273;
 $toolbar-label-color:               #000;
 $toolbar-field-placeholder-color:   #777;
+$checkbox-size:                     null;
+$-moz-checkbox-size:                null;
+$checkbox-box-shadow:               null;
 
 // Dropdown toolbar button
 $dropdown-toolbar-btn-margin-x:           3px;
